# robotica-minor-5

./: .gitignore  arduino connections purpose and stuff  debiankernel-link.txt  sentdata terminal  serial.c  usbinternet.rc  worldpercept.txt  writeSerial.py
LaTeX/: Process report 1.aux  Process report 1.dvi  Process report 1.log.orig  Process report 1.out  Process report 1.tex  Process report 1.tex.orig  Process report 1.toc  eurosym
com/: usbcom.py
drivers/: ftdi_sio.c
gazebo_ws/gazebo/models/my_robot/: model.config  model.sdf
intro_robotic_code/: readme  teleop_inc_key.cpp
intro_robotic_code/base_catkin/: CMakeLists.txt  package.xml
intro_robotic_code/base_catkin/cfg/: wheels.xml
intro_robotic_code/base_catkin/include/base_catkin/: base.h
intro_robotic_code/base_catkin/launch/: base.launch
intro_robotic_code/base_catkin/msg/: BaseStatus.msg  MotorStatus.msg
intro_robotic_code/base_catkin/src/: base.cpp
intro_robotic_code/multiultrasound/: multiultrasound.ino
intro_robotic_code/teleop_twist_joy-indigo-devel/: CMakeLists.txt
intro_robotic_code/teleop_twist_joy-indigo-devel/config/: ps3.config.yaml
intro_robotic_code/teleop_twist_joy-indigo-devel/launch/: teleop.launch
intro_robotic_code/teleop_twist_joy-indigo-devel/src/: teleop_node.cpp  teleop_twist_joy.cpp
intro_robotic_code/ultrasound_Arduino/: ultrasound_Arduino.ino
multisone/: multisone.ino
turtleCode/: kinect_controller.cpp  readme
turtleCode/arduino/LCD12864RSPI/: LCD12864RSPI.cpp  LCD12864RSPI.h
turtleCode/arduino/LCD12864RSPI/examples/LCD12864_test/: DFrobot_bmp.h  DFrobot_char.h  LCD12864_test.ino
turtleCode/arduino/cazactyl/examples/LCD12864_test/: DFrobot_bmp.h  LCD12864RSPI.cpp  LCD12864RSPI.h  LCD12864_test.ino
turtleCode/arduino/connectiontest/: connectiontest.ino
turtleCode/arduino/final/LCD12864_test/: DFrobot_bmp.h  DFrobot_char.h  LCD12864RSPI.cpp  LCD12864RSPI.h  LCD12864_test.h  LCD12864_test.ino  MFRC522.cpp  Makefile
turtleCode/arduino/final/LCD12864_test/build-leonardo/: CDC.d  HID.d  HardwareSerial.d  IPAddress.d  LCD12864RSPI.d  LCD12864_test.d  LCD12864_test.elf  LCD12864_test.hex  MFRC522.d  Print.d  Stream.d  Tone.d  USBCore.d  WInterrupts.d  WMath.d  WString.d  main.d  new.d  wiring.d  wiring_analog.d  wiring_digital.d  wiring_pulse.d  wiring_shift.d
turtleCode/arduino/final/LCD12864_test/build-leonardo/libs/SPI/: SPI.d
turtleCode/arduino/final/LCD12864_test/build-leonardo/libs/Servo/: Servo.d
turtleCode/arduino/final/LCD12864_test/build-uno/: LCD12864RSPI.d  LCD12864_test.d  LCD12864_test.elf  LCD12864_test.hex  MFRC522.d
turtleCode/arduino/servosetup/: servosetup
turtleCode/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
turtleCode/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
turtleCode/devel/include/glados/: music.h
turtleCode/devel/lib/glados/: conveyorDriver  core  dance  drivingDriver  endSwitchSensor  launchDriver  launchManager  mathAsker  newCore  serial  serialListener  sound_player  switchSensor
turtleCode/devel/lib/pkgconfig/: glados.pc
turtleCode/devel/lib/python2.7/dist-packages/glados/msg/: __init__.py  _music.py
turtleCode/devel/share/common-lisp/ros/glados/msg/: _package.lisp  _package_music.lisp  glados-msg.asd  music.lisp
turtleCode/devel/share/glados/cmake/: glados-msg-extras.cmake  glados-msg-paths.cmake  gladosConfig.cmake
turtleCode/install/: .rosinstall
turtleCode/install/lib/pkgconfig/: glados.pc
turtleCode/src/glados/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
turtleCode/src/glados/include/: here.txt
turtleCode/src/glados/launch/: conveyor.launch  core.launch  drivers.launch  launch.launch  launch.launch~  launchtest.lauch  launchtest.launch  main.launch  sensors.launch
turtleCode/src/glados/msg/: Num.msg~  music.msg  music.msg~
turtleCode/src/glados/src/: core.cpp  core.cpp~  dancer.cpp  dancer.cpp.save  dancer.cpp~  launchManager.cpp  launchManager.h  mathAsker.cpp  mathAsker.cpp.orig  mathAsker.cpp~  newCore.cpp  newCore.cpp.orig  newCore.cpp.save.2  newCore.h  speak.cpp
turtleCode/src/glados/src/audio/: soundPlayer.cpp
turtleCode/src/glados/src/drivers/: audioDriver.cpp  conveyorDriver.cpp  conveyorDriver.h  displayDriver.cpp  displayDriver.cpp~  drivingDriver.cpp  drivingDriver.cpp~  drivingDriver.h  launchDriver.cpp  launchDriver.h  musicListener.cpp  rfid.cpp  serialDriver.c  serialListener.cpp  serialListener.cpp.orig  switchSensor.cpp  wheelDriver.cpp  wheels.xml
turtleCode/src/glados/src/drivers/test/: utest.cpp
turtleCode/src/glados/src/sensors/: RFIDSensor.cpp  RFIDSensor.h  UltrasoneSensor.cpp  UltrasoneSensor.h  endSwitchSensor.cpp  switchSensor.cpp  switchSensor.h  ultrasoneSensor.h
turtleCode/src/glados/src/sensors/test/: utest.cpp
