<?xml version ="1.0"?>
<package>
<name>glados</name>
<version>0.0.1</version>
<description>
Volcano toy robot
</description>
<maintainer email="evilOverlord@cse.sc.edu">
Robotica Minor 2014 group 5
</maintainer>

<license >MIT</license >
<buildtool_depend>catkin </buildtool_depend>
<build_depend>geometry_msgs</build_depend>
<run_depend>geometry_msgs</run_depend>
<build_depend>std_msgs</build_depend>
<run_depend>std_msgs</run_depend>
<build_depend>turtlesim </build_depend>
<run_depend>turtlesim </run_depend>
<build_depend>roscpp</build_depend>
<run_depend>roscpp</run_depend>
<build_depend>message_generation</build_depend>
<run_depend>message_runtime</run_depend>
<build_depend>threemxl</build_depend>
<run_depend>threemxl</run_depend>
catkin_package(
  CATKIN_DEPENDS message_runtime
)
add_message_files(
  FILES
  Num.msg
)
generate_messages(
  DEPENDENCIES
  std_msgs
)
</package>
